fixed positioning of blogs so they don't overlap on top of navbar

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -6,5 +6,10 @@
 
 #medium-widget {
   text-align: left;
-  padding-left: 200px;
+  position: relative;
+  margin: 50px 150px 0;
 }
+
+/* #medium-widget-article__avatar-picture {
+  
+} */
